[package]
name = "comark_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = { version = "0.4.5", optional = true }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
comrak={version="0.13.0", default-features=false}
wasm-bindgen="0.2.81"


[profile.release]
lto = true
opt-level = "z"
